--- a/config/database.yml
+++ b/config/database.yml
@@ -84,21 +84,38 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+#production:
+#  primary: &primary_production
+#    <<: *default
+#    database: elso_production
+#    username: elso
+#    password: <%= ENV["ELSO_DATABASE_PASSWORD"] %>
+#  cache:
+#    <<: *primary_production
+#    database: elso_production_cache
+#   migrations_paths: db/cache_migrate
+#  queue:
+#    <<: *primary_production
+#    database: elso_production_queue
+#    migrations_paths: db/queue_migrate
+#  cable:
+#    <<: *primary_production
+#    database: elso_production_cable
+#    migrations_paths: db/cable_migrate
+
 production:
-  primary: &primary_production
+  primary:
     <<: *default
-    database: elso_production
-    username: elso
-    password: <%= ENV["ELSO_DATABASE_PASSWORD"] %>
+    url: <%= ENV["DATABASE_URL"] %>
   cache:
-    <<: *primary_production
-    database: elso_production_cache
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
     migrations_paths: db/cache_migrate
   queue:
-    <<: *primary_production
-    database: elso_production_queue
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
     migrations_paths: db/queue_migrate
   cable:
-    <<: *primary_production
-    database: elso_production_cable
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
     migrations_paths: db/cable_migrate
